# serialport-demo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/whzwl/xbs/serialport_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/whzwl/xbs/serialport_demo/: MainActivity.java  SerialPort.java  SerialUilt.java
app/src/main/jni/: serialport.c
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/whzwl/xbs/serialport_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
